--- a/index.html
+++ b/index.html
@@ -1,78 +1,13 @@
 ---
 # Homepage
 ---
-<!-- Hero Section -->
-<section class="hero-main">
+<section class="hero section">
     <div class="container">
-        <div class="hero-content">
-            <h1>The Foundation for Your Innovation</h1>
-            <p>We engineer robust, end-to-end solutions, seamlessly fusing hardware and software to bring your most complex technological ideas to life.</p>
-            <a href="{{ '/services.html' | relative_url }}" class="button-primary">Explore Our Services</a>
-        </div>
+        <h1>Keystone Integrated Systems</h1>
+        <p class="motto">The <strong>Foundation</strong> for Your <strong>Innovation.</strong></p>
+        <p class="hero-description">We engineer robust, end-to-end solutions, seamlessly fusing hardware and software to bring your most complex technological ideas to life.</p>
+        <a href="{{ '/portfolio.html' | relative_url }}" class="button-primary">View Our Work</a>
     </div>
-</section>
+</section>```
 
-<!-- About Us Section -->
-<section class="section">
-    <div class="container">
-        <div class="split-section">
-            <div class="split-content">
-                <h2 class="section-title left-align">Who We Are</h2>
-                <p>Keystone is a trusted product engineering services partner for global automotive, industrial, and technology leaders. Founded on a passion for solving complex challenges, we specialize in delivering high-quality, reliable embedded systems and software solutions.</p>
-                <p>Our agile team of experts integrates seamlessly with yours, becoming a true extension of your R&D department.</p>
-            </div>
-            <div class="split-image">
-                <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1170&q=80" alt="Engineering team working together">
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Numbers That Matter Section -->
-<section class="section bg-light" id="counters">
-    <div class="container">
-        <h2 class="section-title">Numbers That Matter</h2>
-        <div class="counter-grid">
-            <div class="counter-item">
-                <h3 class="counter" data-target="50">0</h3>
-                <p>Completed Projects</p>
-            </div>
-            <div class="counter-item">
-                <h3 class="counter" data-target="25">0</h3>
-                <p>Expert Engineers</p>
-            </div>
-            <div class="counter-item">
-                <h3 class="counter" data-target="10">0</h3>
-                <p>Years of Innovation</p>
-            </div>
-            <div class="counter-item">
-                <h3 class="counter" data-target="98">0</h3>
-                <p>% Client Satisfaction</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Clientele Section -->
-<section class="section">
-    <div class="container">
-        <h2 class="section-title">Our Clientele</h2>
-        <div class="client-scroller">
-            <div class="client-logos">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+A" alt="Client A">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+B" alt="Client B">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+C" alt="Client C">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+D" alt="Client D">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+E" alt="Client E">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+F" alt="Client F">
-                <!-- Logos are duplicated for a seamless scroll -->
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+A" alt="Client A">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+B" alt="Client B">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+C" alt="Client C">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+D" alt="Client D">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+E" alt="Client E">
-                <img src="https://via.placeholder.com/150x60/ccc/888?text=Client+F" alt="Client F">
-            </div>
-        </div>
-    </div>
-</section>
+---
