--- a/services.html
+++ b/services.html
@@ -1,18 +1,20 @@
+
+```html
 ---
 title: Our Services
 description: "Explore our core competencies, from embedded systems and full-stack IoT development to complete system integration and automation."
 ---
-<div class="page-header">
+<div class="page-header section">
     <div class="container">
-        <h1>Our Engineering Services</h1>
-        <p>We provide comprehensive solutions across the entire product lifecycle.</p>
+        <h1>Our Services</h1>
+        <p class="hero-description">We offer a comprehensive suite of engineering services to tackle your most complex challenges.</p>
     </div>
 </div>
 
-<section class="section">
+<section id="services" class="services-section section">
     <div class="container">
         <div class="services-grid">
-             <div class="service-card">
+            <div class="service-card">
                 <div class="icon-wrapper"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"></rect><line x1="7" y1="2" x2="7" y2="22"></line><line x1="17" y1="2" x2="17" y2="22"></line><line x1="2" y1="12" x2="22" y2="12"></line><line x1="2" y1="7" x2="7" y2="7"></line><line x1="2" y1="17" x2="7" y2="17"></line><line x1="17" y1="17" x2="22" y2="17"></line><line x1="17" y1="7" x2="22" y2="7"></line></svg></div>
                 <h3>Embedded Systems Design</h3>
                 <p>From initial concept and schematic design to firmware development and prototyping, we create the intelligent core for your physical products.</p>
