--- a/portfolio.html
+++ b/portfolio.html
@@ -2,34 +2,40 @@
 title: Our Portfolio
 description: "A selection of projects showcasing our expertise in delivering innovative, integrated hardware and software solutions."
 ---
-<div class="page-header">
+<div class="page-header section no-border">
     <div class="container">
-        <h1>Our Work</h1>
-        <p>We take pride in turning ambitious ideas into reality. Here are some examples of the solutions we've engineered.</p>
+        <h2>Have a Complex Challenge? <br>Let's Engineer a Solution.</h2>
+        <p class="hero-description">We specialize in turning ambitious ideas into reality. If you have a project that requires deep integration of hardware and software, we want to hear from you.</p>
+        <a href="mailto:contact@keystone-systems.com" class="button-primary">contact@keystone-systems.com</a>
     </div>
 </div>
 
-<section class="section">
+<section class="portfolio-section section">
     <div class="container">
+        <h2>Our Work</h2>
         <div class="portfolio-grid">
-            <div class="portfolio-item">
-                <div class="portfolio-image">
-                    <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=500&q=80" alt="Project Image">
-                </div>
+            <div class="portfolio-card">
+                <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=500&q=80" alt="Project Image">
                 <div class="portfolio-content">
                     <h3>Smart Agriculture IoT Platform</h3>
-                    <p>Developed an end-to-end IoT system for monitoring soil moisture and automating irrigation, resulting in a 30% reduction in water usage for the client. We handled everything from sensor selection and firmware to the cloud dashboard.</p>
+                    <p>Developed an end-to-end IoT system for monitoring soil moisture and automating irrigation, resulting in a 30% reduction in water usage for the client.</p>
                     <div class="tags"><span>IoT</span><span>Embedded</span><span>Cloud</span></div>
                 </div>
             </div>
-             <div class="portfolio-item">
-                <div class="portfolio-image">
-                    <img src="https://images.unsplash.com/photo-1620712943543-9596128693a0?auto=format&fit=crop&w=500&q=80" alt="Project Image">
-                </div>
+            <div class="portfolio-card">
+                <img src="https://images.unsplash.com/photo-1620712943543-9596128693a0?auto=format&fit=crop&w=500&q=80" alt="Project Image">
                 <div class="portfolio-content">
                     <h3>Automated Lab Robotics</h3>
-                    <p>Designed and integrated a robotic arm with custom firmware and a web-based dashboard for automating repetitive sample handling in a research lab. This increased throughput by 400% and reduced manual errors.</p>
+                    <p>Designed and integrated a robotic arm with custom firmware and a web-based dashboard for automating repetitive sample handling in a research lab.</p>
                     <div class="tags"><span>Automation</span><span>Robotics</span><span>Firmware</span></div>
+                </div>
+            </div>
+            <div class="portfolio-card">
+                <img src="https://images.unsplash.com/photo-1530435460869-d13625c69bbf?auto=format&fit=crop&w=500&q=80" alt="Project Image">
+                <div class="portfolio-content">
+                    <h3>Fleet Management Dashboard</h3>
+                    <p>A real-time GPS tracking and vehicle diagnostics dashboard built with modern web technologies, providing actionable insights for logistics companies.</p>
+                    <div class="tags"><span>Web App</span><span>Data</span><span>API</span></div>
                 </div>
             </div>
         </div>
