--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,12 @@
 title: Our Portfolio
 description: "A selection of projects showcasing our expertise in delivering innovative, integrated hardware and software solutions."
 ---
+
+<!-- =================================================================== -->
+<!-- SECTION 1: "Have a Complex Challenge?" -->
+<!-- This uses the original page-header class for correct centering -->
+<!-- and adds the new "no-border" class to remove the line. -->
+<!-- =================================================================== -->
 <div class="page-header section no-border">
     <div class="container">
         <h2>Have a Complex Challenge? <br>Let's Engineer a Solution.</h2>
@@ -9,11 +15,16 @@ description: "A selection of projects showcasing our expertise in delivering inn
         <a href="mailto:contact@keystone-systems.com" class="button-primary">contact@keystone-systems.com</a>
     </div>
 </div>
- 
+
+<!-- =================================================================== -->
+<!-- SECTION 2: "Our Work" Heading + The Project Grid -->
+<!-- =================================================================== -->
 <section class="portfolio-section section">
     <div class="container">
         <h2>Our Work</h2>
+        
         <div class="portfolio-grid">
+            <!-- Project 1 -->
             <div class="portfolio-card">
                 <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=500&q=80" alt="Project Image">
                 <div class="portfolio-content">
@@ -22,6 +33,7 @@ description: "A selection of projects showcasing our expertise in delivering inn
                     <div class="tags"><span>IoT</span><span>Embedded</span><span>Cloud</span></div>
                 </div>
             </div>
+            <!-- Project 2 -->
             <div class="portfolio-card">
                 <img src="https://images.unsplash.com/photo-1620712943543-9596128693a0?auto=format&fit=crop&w=500&q=80" alt="Project Image">
                 <div class="portfolio-content">
@@ -30,6 +42,7 @@ description: "A selection of projects showcasing our expertise in delivering inn
                     <div class="tags"><span>Automation</span><span>Robotics</span><span>Firmware</span></div>
                 </div>
             </div>
+            <!-- Project 3 -->
             <div class="portfolio-card">
                 <img src="https://images.unsplash.com/photo-1530435460869-d13625c69bbf?auto=format&fit=crop&w=500&q=80" alt="Project Image">
                 <div class="portfolio-content">
