--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-# Homepage
+# The front matter is minimal because we set defaults in _config.yml
 ---
 <section class="hero section">
     <div class="container">
@@ -8,6 +8,4 @@
         <p class="hero-description">We engineer robust, end-to-end solutions, seamlessly fusing hardware and software to bring your most complex technological ideas to life.</p>
         <a href="{{ '/portfolio.html' | relative_url }}" class="button-primary">View Our Work</a>
     </div>
-</section>```
-
----
+</section>
