--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@
         <a href="{{ '/portfolio.html' | relative_url }}" class="button-primary">View Our Work</a>
     </div>
 </section>
+
+<!-- You can add more homepage content here if you wish -->
