--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@ description: We engineer robust, end-to-end solutions, seamlessly fusing hardwar
     </div>
 </section>
 
+<!-- NEW: Industries We Serve Section -->
+<section class="section">
+    <div class="container">
+        <div class="section-title">
+            <h2>Industries We Empower</h2>
+            <p>Applying our deep technical expertise to solve challenges across key sectors.</p>
+        </div>
+        <div class="industries-grid">
+            <div class="industry-card">
+                <h4>Industrial IoT (IIoT)</h4>
+                <span>Predictive Maintenance, Asset Tracking, Smart Factories</span>
+            </div>
+            <div class="industry-card">
+                <h4>Smart Home & Automation</h4>
+                <span>Connected Appliances, Energy Management, Security Systems</span>
+            </div>
+            <div class="industry-card">
+                <h4>Automotive Tech</h4>
+                <span>In-Vehicle Infotainment, Telematics, EV Charging Systems</span>
+            </div>
+            <div class="industry-card">
+                <h4>MedTech & Healthcare</h4>
+                <span>Remote Patient Monitoring, Wearable Sensors, Lab Automation</span>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Testimonials Section -->
 <section class="section">
     <div class="container">
