--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 layout: default
 title: Our Services
 ---
-<div class="page-header section">
+<div class="page-header">
     <div class="container">
         <h1>Our Engineering Services</h1>
         <p class="hero-description">Specialized expertise to solve your toughest technology challenges.</p>
@@ -12,8 +12,8 @@ title: Our Services
 <section class="section">
     <div class="container">
         <!-- Service Item 1 -->
-        <div class="service-item-detailed">
-            <h2>Embedded Systems & Firmware Development</h2>
+        <div id="embedded" class="service-item-detailed">
+            <h2>Embedded Systems & Firmware</h2>
             <p>The core of any intelligent device is its firmware. We specialize in writing robust, efficient, and reliable code for microcontrollers and embedded processors. Our expertise ensures your hardware performs optimally, securely, and exactly as intended.</p>
             <ul>
                 <li>Custom Firmware for ARM Cortex-M, ESP32, and other MCUs</li>
@@ -24,7 +24,7 @@ title: Our Services
         </div>
         
         <!-- Service Item 2 -->
-        <div class="service-item-detailed">
+        <div id="iot" class="service-item-detailed">
             <h2>IoT & Wireless Connectivity</h2>
             <p>We connect your devices to the world. Whether you need short-range communication or global cellular connectivity, we design and implement the right wireless strategy for your product's specific needs, focusing on power efficiency and data integrity.</p>
             <ul>
@@ -36,7 +36,7 @@ title: Our Services
         </div>
 
         <!-- Service Item 3 -->
-        <div class="service-item-detailed">
+        <div id="cloud" class="service-item-detailed">
             <h2>Cloud & Backend Integration</h2>
             <p>An IoT solution is incomplete without a powerful cloud backend. We architect and build scalable server-side applications that can ingest, process, and analyze data from thousands of devices, providing you with actionable insights.</p>
             <ul>
@@ -45,6 +45,66 @@ title: Our Services
                 <li>API development for web and mobile applications</li>
                 <li>Device management and over-the-air (OTA) update systems</li>
             </ul>
+        </div>
+    </div>
+</section>
+
+<!-- NEW: Our Approach Section -->
+<section class="section">
+    <div class="container">
+        <div class="section-title">
+            <h2>Our Development Process</h2>
+            <p>A structured approach to guarantee project success from concept to launch.</p>
+        </div>
+        <div class="process-timeline">
+            <div class="timeline-item">
+                <div class="timeline-step">1</div>
+                <div class="timeline-content">
+                    <h3>Discovery & Strategy</h3>
+                    <p>We begin by thoroughly understanding your requirements, challenges, and goals to define a clear project roadmap.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-step">2</div>
+                <div class="timeline-content">
+                    <h3>Design & Architecture</h3>
+                    <p>Our engineers design the system architecture, selecting the right technologies for a scalable and robust solution.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-step">3</div>
+                <div class="timeline-content">
+                    <h3>Development & Integration</h3>
+                    <p>Agile development sprints for hardware and software, with continuous integration and transparent progress tracking.</p>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-step">4</div>
+                <div class="timeline-content">
+                    <h3>Testing & Deployment</h3>
+                    <p>Rigorous testing ensures quality and reliability before a seamless deployment to your production environment.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- NEW: Technology Spotlight Section -->
+<section class="section">
+    <div class="container">
+        <div class="section-title">
+            <h2>Technology We Master</h2>
+            <p>We use a proven stack of modern technologies to build world-class products.</p>
+        </div>
+        <div class="tech-grid">
+            <div class="tech-card"><span>AWS</span></div>
+            <div class="tech-card"><span>Azure</span></div>
+            <div class="tech-card"><span>FreeRTOS</span></div>
+            <div class="tech-card"><span>ARM Cortex</span></div>
+            <div class="tech-card"><span>Python</span></div>
+            <div class="tech-card"><span>C/C++</span></div>
+            <div class="tech-card"><span>BLE 5</span></div>
+            <div class="tech-card"><span>MQTT</span></div>
         </div>
     </div>
 </section>
