--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@ title: Contact Us
             <div class="contact-card">
                 <h3>Email Us</h3>
                 <p>For project inquiries, technical questions, or partnership opportunities, please send us an email.</p>
-                <a href="mailto:contact@keystone-systems.com" class="button-primary">contact@keystone-systems.com</a>
+                <a href="mailto: keystoneintigratedsystems@gmail.com" class="button-primary">contact@keystone-systems.com</a>
             </div>
             <div class="contact-card">
                 <h3>Business Hours</h3>
