--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Keystone Integrated Systems - End-to-End Engineering
+title: CircuitX Systems - End-to-End Engineering
 description: We engineer robust, end-to-end solutions, seamlessly fusing hardware and software to bring your vision to life.
 ---
 
 <!-- Hero Section -->
 <div class="hero">
     <div class="container">
-        <h1>Keystone Integrated Systems</h1>
+        <h1>CircuitX Systems</h1>
         <p class="motto">The <strong>Foundation</strong> for Your <strong>Innovation</strong></p>
         <p class="hero-description">We engineer robust, end-to-end solutions, seamlessly fusing hardware and software to bring your vision to life.</p>
         <a href="{{ '/services.html' | relative_url }}" class="button-primary">View Our Services</a>
@@ -114,6 +114,6 @@ description: We engineer robust, end-to-end solutions, seamlessly fusing hardwar
     <div class="container">
         <h2>Ready to Build Your Next Innovation?</h2>
         <p>Let's discuss how our expertise can become the foundation for your success. Reach out today for a consultation.</p>
-        <a href="mailto:contact@keystone-systems.com" class="button-primary">Get in Touch</a>
+        <a href="mailto:contact@circuitx-systems.com" class="button-primary">Get in Touch</a>
     </div>
 </section>
