--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@ title: Contact Us
 ---
 <div class="page-header"> 
     <div class="container">
-        <h1>Get in Touch</h1>
-        <p class="hero-description">We're here to answer your questions and discuss your project. Let's build something great together.</p>
+        <h1>Contact CircuitX Systems</h1>
+        <p class="hero-description">Have questions or want to discuss your next project? Our team is ready to collaborate and help bring your ideas to life.</p>
     </div>
 </div>
 
@@ -14,12 +14,12 @@ title: Contact Us
         <div class="contact-grid">
             <div class="contact-card">
                 <h3>Email Us</h3>
-                <p>For project inquiries, technical questions, or partnership opportunities, please send us an email.</p>
-                <a href="mailto: keystoneintigratedsystems@gmail.com" class="button-primary">keystoneintigratedsystems@gmail.com</a>
+                <p>For project inquiries, technical support, or partnership opportunities, reach out via email:</p>
+                <a href="mailto:circuitx.systems@gmail.com" class="button-primary">circuitx.systems@gmail.com</a>
             </div>
             <div class="contact-card">
                 <h3>Business Hours</h3>
-                <p>Our team is available to connect during standard business hours.</p>
+                <p>Our engineering and support team is available during standard business hours:</p>
                 <p><strong>Monday - Friday:</strong> 9:00 AM - 6:00 PM</p>
             </div>
         </div>
