--- a/portfolio.html
+++ b/portfolio.html
@@ -1,23 +1,21 @@
 ---
 title: Our Portfolio
-description: "A selection of projects showcasing our expertise in delivering innovative, integrated hardware and software solutions."
+description: "A showcase of projects demonstrating CircuitX Systems' expertise in integrated hardware and software solutions."
 ---
 
 <!-- =================================================================== -->
 <!-- SECTION 1: "Have a Complex Challenge?" -->
-<!-- This uses the original page-header class for correct centering -->
-<!-- and adds the new "no-border" class to remove the line. -->
 <!-- =================================================================== -->
 <div class="page-header section no-border">
     <div class="container">
         <h2>Have a Complex Challenge? <br>Let's Engineer a Solution.</h2>
-        <p class="hero-description">We specialize in turning ambitious ideas into reality. If you have a project that requires deep integration of hardware and software, we want to hear from you.</p>
-        <a href="mailto:contact@keystone-systems.com" class="button-primary">contact@keystone-systems.com</a>
+        <p class="hero-description">We transform ambitious ideas into reality. If your project demands seamless integration of hardware and software, our team is ready to collaborate.</p>
+        <a href="mailto:circuitx.systems@gmail.com" class="button-primary">circuitx.systems@gmail.com</a>
     </div>
 </div>
 
 <!-- =================================================================== -->
-<!-- SECTION 2: "Our Work" Heading + The Project Grid -->
+<!-- SECTION 2: "Our Work" Heading + Portfolio Grid -->
 <!-- =================================================================== -->
 <section class="portfolio-section section">
     <div class="container">
@@ -26,28 +24,30 @@ description: "A selection of projects showcasing our expertise in delivering inn
         <div class="portfolio-grid">
             <!-- Project 1 -->
             <div class="portfolio-card">
-                <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=500&q=80" alt="Project Image">
+                <img src="https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?auto=format&fit=crop&w=500&q=80" alt="Smart Agriculture IoT Platform">
                 <div class="portfolio-content">
                     <h3>Smart Agriculture IoT Platform</h3>
-                    <p>Developed an end-to-end IoT system for monitoring soil moisture and automating irrigation, resulting in a 30% reduction in water usage for the client.</p>
+                    <p>End-to-end IoT system for monitoring soil moisture and automating irrigation, achieving a 30% reduction in water usage for the client.</p>
                     <div class="tags"><span>IoT</span><span>Embedded</span><span>Cloud</span></div>
                 </div>
             </div>
+            
             <!-- Project 2 -->
             <div class="portfolio-card">
-                <img src="https://images.unsplash.com/photo-1620712943543-9596128693a0?auto=format&fit=crop&w=500&q=80" alt="Project Image">
+                <img src="https://images.unsplash.com/photo-1620712943543-9596128693a0?auto=format&fit=crop&w=500&q=80" alt="Automated Lab Robotics">
                 <div class="portfolio-content">
                     <h3>Automated Lab Robotics</h3>
-                    <p>Designed and integrated a robotic arm with custom firmware and a web-based dashboard for automating repetitive sample handling in a research lab.</p>
+                    <p>Integrated a robotic arm with custom firmware and a web dashboard to automate repetitive sample handling in a research lab.</p>
                     <div class="tags"><span>Automation</span><span>Robotics</span><span>Firmware</span></div>
                 </div>
             </div>
+            
             <!-- Project 3 -->
             <div class="portfolio-card">
-                <img src="https://images.unsplash.com/photo-1530435460869-d13625c69bbf?auto=format&fit=crop&w=500&q=80" alt="Project Image">
+                <img src="https://images.unsplash.com/photo-1530435460869-d13625c69bbf?auto=format&fit=crop&w=500&q=80" alt="Fleet Management Dashboard">
                 <div class="portfolio-content">
                     <h3>Fleet Management Dashboard</h3>
-                    <p>A real-time GPS tracking and vehicle diagnostics dashboard built with modern web technologies, providing actionable insights for logistics companies.</p>
+                    <p>Real-time GPS tracking and vehicle diagnostics dashboard built with modern web technologies, providing actionable insights for logistics operations.</p>
                     <div class="tags"><span>Web App</span><span>Data</span><span>API</span></div>
                 </div>
             </div>
