--- a/services.html
+++ b/services.html
@@ -1,7 +1,12 @@
 ---
 layout: default
 title: Our Services
+description: "Explore the specialized engineering services CircuitX Systems provides to turn complex technology challenges into practical, integrated solutions."
 ---
+
+<!-- =================================================================== -->
+<!-- PAGE HEADER -->
+<!-- =================================================================== -->
 <div class="page-header">
     <div class="container">
         <h1>Our Engineering Services</h1>
@@ -9,102 +14,113 @@ title: Our Services
     </div>
 </div>
 
+<!-- =================================================================== -->
+<!-- EMBEDDED SYSTEMS & FIRMWARE -->
+<!-- =================================================================== -->
 <section class="section">
     <div class="container">
-        <!-- Service Item 1 -->
         <div id="embedded" class="service-item-detailed">
             <h2>Embedded Systems & Firmware</h2>
-            <p>The core of any intelligent device is its firmware. We specialize in writing robust, efficient, and reliable code for microcontrollers and embedded processors. Our expertise ensures your hardware performs optimally, securely, and exactly as intended.</p>
+            <p>Firmware is the heart of any intelligent device. We develop robust, efficient, and reliable code for microcontrollers and embedded processors, ensuring your hardware performs securely and optimally.</p>
             <ul>
                 <li>Custom Firmware for ARM Cortex-M, ESP32, and other MCUs</li>
                 <li>Real-Time Operating System (RTOS) Integration</li>
                 <li>Bare-Metal Programming for maximum performance</li>
-                <li>Driver Development and Hardware Abstraction Layers (HAL)</li>
-            </ul>
-        </div>
-        
-        <!-- Service Item 2 -->
-        <div id="iot" class="service-item-detailed">
-            <h2>IoT & Wireless Connectivity</h2>
-            <p>We connect your devices to the world. Whether you need short-range communication or global cellular connectivity, we design and implement the right wireless strategy for your product's specific needs, focusing on power efficiency and data integrity.</p>
-            <ul>
-                <li>Wi-Fi, Bluetooth Low Energy (BLE), and Mesh Networking</li>
-                <li>LoRaWAN and other Low-Power WAN (LPWAN) technologies</li>
-                <li>Cellular (LTE-M, NB-IoT) integration for remote assets</li>
-                <li>Cloud communication protocols like MQTT and CoAP</li>
+                <li>Driver Development & Hardware Abstraction Layers (HAL)</li>
             </ul>
         </div>
 
-        <!-- Service Item 3 -->
+        <!-- =================================================================== -->
+        <!-- IoT & Wireless Connectivity -->
+        <!-- =================================================================== -->
+        <div id="iot" class="service-item-detailed">
+            <h2>IoT & Wireless Connectivity</h2>
+            <p>We connect devices seamlessly. From local networks to global cellular connectivity, we design solutions that balance power efficiency, security, and data integrity.</p>
+            <ul>
+                <li>Wi-Fi, Bluetooth Low Energy (BLE), and Mesh Networking</li>
+                <li>LoRaWAN and other Low-Power WAN (LPWAN) technologies</li>
+                <li>Cellular integration (LTE-M, NB-IoT) for remote assets</li>
+                <li>Cloud communication protocols: MQTT, CoAP, and HTTP</li>
+            </ul>
+        </div>
+
+        <!-- =================================================================== -->
+        <!-- Cloud & Backend Integration -->
+        <!-- =================================================================== -->
         <div id="cloud" class="service-item-detailed">
             <h2>Cloud & Backend Integration</h2>
-            <p>An IoT solution is incomplete without a powerful cloud backend. We architect and build scalable server-side applications that can ingest, process, and analyze data from thousands of devices, providing you with actionable insights.</p>
+            <p>Scalable, secure, and intelligent backend systems to process data from thousands of devices, giving you actionable insights and control over your IoT ecosystem.</p>
             <ul>
-                <li>Cloud architecture on AWS and Microsoft Azure</li>
+                <li>Cloud architecture on AWS and Azure</li>
                 <li>Data processing pipelines and storage solutions</li>
-                <li>API development for web and mobile applications</li>
-                <li>Device management and over-the-air (OTA) update systems</li>
+                <li>API development for web and mobile platforms</li>
+                <li>Device management and Over-The-Air (OTA) updates</li>
             </ul>
         </div>
     </div>
 </section>
 
-<!-- NEW: Our Approach Section -->
+<!-- =================================================================== -->
+<!-- DEVELOPMENT PROCESS TIMELINE -->
+<!-- =================================================================== -->
 <section class="section">
     <div class="container">
         <div class="section-title">
             <h2>Our Development Process</h2>
-            <p>A structured approach to guarantee project success from concept to launch.</p>
+            <p>A structured approach ensuring project success from concept to deployment.</p>
         </div>
         <div class="process-timeline">
             <div class="timeline-item">
                 <div class="timeline-step">1</div>
                 <div class="timeline-content">
                     <h3>Discovery & Strategy</h3>
-                    <p>We begin by thoroughly understanding your requirements, challenges, and goals to define a clear project roadmap.</p>
+                    <p>We begin by understanding your requirements, defining goals, and mapping out a clear project roadmap.</p>
                 </div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-step">2</div>
                 <div class="timeline-content">
                     <h3>Design & Architecture</h3>
-                    <p>Our engineers design the system architecture, selecting the right technologies for a scalable and robust solution.</p>
+                    <p>Our engineers create a robust system design and select technologies for scalability and reliability.</p>
                 </div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-step">3</div>
                 <div class="timeline-content">
                     <h3>Development & Integration</h3>
-                    <p>Agile development sprints for hardware and software, with continuous integration and transparent progress tracking.</p>
+                    <p>We run agile development sprints with continuous integration, ensuring transparent progress and early delivery of features.</p>
                 </div>
             </div>
             <div class="timeline-item">
                 <div class="timeline-step">4</div>
                 <div class="timeline-content">
                     <h3>Testing & Deployment</h3>
-                    <p>Rigorous testing ensures quality and reliability before a seamless deployment to your production environment.</p>
+                    <p>Extensive QA and validation guarantee performance, security, and a seamless deployment to your production environment.</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
 
-<!-- NEW: Technology Spotlight Section -->
+<!-- =================================================================== -->
+<!-- TECHNOLOGY STACK -->
+<!-- =================================================================== -->
 <section class="section">
     <div class="container">
         <div class="section-title">
             <h2>Technology We Master</h2>
-            <p>We use a proven stack of modern technologies to build world-class products.</p>
+            <p>We leverage a proven set of modern technologies to deliver world-class solutions.</p>
         </div>
         <div class="tech-grid">
-            <div class="tech-card"><span>AWS</span></div>
-            <div class="tech-card"><span>Azure</span></div>
-            <div class="tech-card"><span>FreeRTOS</span></div>
-            <div class="tech-card"><span>ARM Cortex</span></div>
-            <div class="tech-card"><span>Python</span></div>
-            <div class="tech-card"><span>C/C++</span></div>
-            <div class="tech-card"><span>BLE 5</span></div>
-            <div class="tech-card"><span>MQTT</span></div>
+            <div class="tech-card">AWS</div>
+            <div class="tech-card">Azure</div>
+            <div class="tech-card">FreeRTOS</div>
+            <div class="tech-card">ARM Cortex</div>
+            <div class="tech-card">Python</div>
+            <div class="tech-card">C/C++</div>
+            <div class="tech-card">BLE 5</div>
+            <div class="tech-card">MQTT</div>
         </div>
     </div>
 </section>
+
